fix(cr-pass-2): resolve second-pass review findings
HIGH:
- fix: RateLimitConfig — @Configuration → @Component (filter was never registered with servlet container = silently inactive)
- fix: RateLimitConfig — getBucket() now returns stateless bucket for over-limit IPs; eliminates TOCTOU race in check-evict-insert
- fix: EventIngestionService — remove misleading Objects.requireNonNull (validator handles null timestamp upstream; NPE → 500 was misleading)

MEDIUM:
- fix: SamplesService — remove overly strict offset%limit==0 guard; document page-boundary truncation instead
- fix: application.yml — correct misleading comment (max-http-form-post-size is form-encoded only, not JSON)

LOW:
- fix: ThreatScoreCalculatorTest — rename criticalDenyLoginRepeat_shouldEqual100 → shouldEqual90
- fix: GlobalExceptionHandler — add @Slf4j + log.error() in catch-all; exceptions no longer silently swallowed
- refactor: replace .collect(Collectors.toList()) with .toList() throughout (Java 17 idiom)
- refactor: remove stale java.util.stream.Collectors imports