@@ -14,7 +14,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -51,7 +50,7 @@ public class AlertService {
         Instant now = Instant.now();
         return alertRepository.findAll().stream()
                 .map(rule -> evaluate(rule, now))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private AlertEvaluationResult evaluate(AlertRule rule, Instant now) {
